--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "restructuredtext.confPath": "${workspaceFolder}\\docs\\source"
+  "restructuredtext.confPath": "${workspaceFolder}\\docs\\source",
+  "esbonio.server.enabled": true,
+  "esbonio.sphinx.confDir": "c:\\Users\\baptiste\\Documents\\coursbts_git\\cours-sio\\docs\\source"
 }
