ajout Javascript et divers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,3 @@
 {
-  "restructuredtext.confPath": "${workspaceFolder}\\docs\\source",
-  "esbonio.sphinx.confDir": "c:\\Users\\baptiste\\Documents\\coursbts_git\\cours-sio\\docs\\source",
-  "esbonio.server.enabled": true
+  "esbonio.sphinx.confDir": ""
 }
